# BitTorrent

./: .gitlab-ci.yml  Makefile  README.md  bittorrent-cli  cli.py  client.py  fileio.py  parse.py  piece.py  setup.cfg  swarm.py  torrent.py  tracker.py  user.py
HTTP/: tmp.py
Research/: manjaro.torrent  observation.txt
Research/bcoding-1.5/: PKG-INFO
bdencoder/: bdencoder.py
packet/: packet.py
parser/: tparser.py
peers/: packetformat.py  packetization.py  peer.py
request/: httprequest.py  packetformat.py  packetization.py  udprequest.py
research/: Questions.txt  observation.txt
research/torrentfile/: movie.torrent
src/bittorrent/: cli.py  client.py  fileio.py  getfilesha.py  parse.py  piece.py  swarm.py  user.py
src/bittorrent/bdencoder/: bdencoder.py
src/bittorrent/peers/: packetformat.py  packetization.py  peer.py
src/bittorrent/request/: httprequest.py  packetformat.py  udprequest.py
src/bittorrent/research/: parser.txt  torrent.txt
trequest/: format.py  httptrequest.py  packet.py  packetization.py  pkt_format.py  udprequest.md  udprequest.py
tutils/: bdencoder.py  tmp.py  udprequest.md  udprequest.py
