[metadata]
name = bittorrent
version = 0.0.1
author = Sairaj kodilkar
author_email = skodilkar7@gmail.com
description = A simple bittorrent client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sairajkodilkar/BitTorrent.git
project_urls =
    Bug Tracker = https://github.com/Sairajkodilkar/BitTorrent.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	requests

[options.packages.find]
where = src
